--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,50 @@
+server:
+  port: 8090
+
 spring:
   application:
     name: admin-bot-service
 
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:social_network}
-    username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:password}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/admin_bot_db}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
 
   jpa:
     hibernate:
-      ddl-auto: none
-    show-sql: true
+      ddl-auto: validate
+    show-sql: false
 
   liquibase:
-    change-log: classpath:/db/changelog/db.changelog-master.yaml
+    change-log: classpath:db/changelog/db.changelog-master.yaml
 
-  data:
-    redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
+# ⭐ URL к internal эндпоинтам mc-account
+services:
+  account:
+    url: ${ACCOUNT_SERVICE_URL:http://mc-account:8080/internal/account}
 
-  kafka:
-    bootstrap-servers: ${KAFKA_SERVERS:localhost:9092}
-    consumer:
-      group-id: admin-bot-group
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
-  instance:
-    prefer-ip-address: true
-
+# Telegram
 telegram:
   bot:
-    token: ${TELEGRAM_BOT_TOKEN}
-    username: ${TELEGRAM_BOT_USERNAME}
+    token: ${TELEGRAM_BOT_TOKEN:8537923153:AAH5mqBbQ__UPG7giA7DwING5ESwId35NbE}
+    username: ${TELEGRAM_BOT_USERNAME:SocialNetworkAdminBot}
 
-gateway:
-  url: http://${GATEWAY_HOST:localhost}:8080/api/v1
-
+# Admin whitelist
 admin:
-  whitelist: ${ADMIN_TELEGRAM_IDS:123456789,987654321}
+  whitelist: ${ADMIN_WHITELIST:123456789,987654321}
 
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
+# Logging
+logging:
+  level:
+    root: INFO
+    com.socialnetwork.adminbot: DEBUG
