--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -209,7 +209,7 @@ deploy:prod:
         set -e
         
         echo "📥 Pulling latest stable image..."
-        docker pull $DOCKER_IMAGE:latest
+        docker pull $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA
         
         echo "🛑 Stopping old container..."
         docker stop mc-admin || true
