Change admin_id column type from BIGINT to UUID in audit log table

--- a/src/main/resources/db/changelog/v1.0/002-create-audit-log-table.yaml
+++ b/src/main/resources/db/changelog/v1.0/002-create-audit-log-table.yaml
@@ -14,7 +14,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: admin_id
-                  type: BIGINT
+                  type: uuid
               - column:
                   name: action_type
                   type: VARCHAR(100)
