--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,7 @@ databaseChangeLog:
       file: db/changelog/v1.0/001-create-admins-table.yaml
   - include:
       file: db/changelog/v1.0/002-create-audit-log-table.yaml
+  - include:
+      file: db/changelog/v1.0/003-recreate-admins-table.yml
+  - include:
+      file: db/changelog/v1.0/004-update-audit-log-admin-id.yml
