--- a/src/main/resources/db/changelog/v1.0/001-create-admins-table.yml
+++ b/src/main/resources/db/changelog/v1.0/001-create-admins-table.yml
@@ -7,37 +7,50 @@ databaseChangeLog:
             tableName: admins
             columns:
               - column:
-                  name: id
-                  type: uuid
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
                   name: telegram_user_id
                   type: BIGINT
                   constraints:
+                    primaryKey: true
                     nullable: false
-                    unique: true
+
               - column:
                   name: username
                   type: VARCHAR(255)
+
               - column:
                   name: first_name
                   type: VARCHAR(255)
+
               - column:
                   name: role
                   type: VARCHAR(50)
                   constraints:
                     nullable: false
+
               - column:
                   name: is_active
                   type: BOOLEAN
                   defaultValueBoolean: true
+                  constraints:
+                    nullable: false
+
               - column:
                   name: created_at
                   type: TIMESTAMP
                   defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+
               - column:
                   name: updated_at
                   type: TIMESTAMP
                   defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+
+        - createIndex:
+            tableName: admins
+            indexName: idx_admins_role
+            columns:
+              - column:
+                  name: role
