Update account service URL to use API version endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
 # ⭐ URL к internal эндпоинтам mc-account
 services:
   account:
-    url: ${ACCOUNT_SERVICE_URL:http://mc-account:34135/internal/account}
+    url: ${ACCOUNT_SERVICE_URL:http://mc-account:34135/api/v1/internal/account}
 
 # Telegram
 telegram:
