--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,7 +228,7 @@ deploy:prod:
           -e TELEGRAM_BOT_TOKEN=$TELEGRAM_BOT_TOKEN \
           -e TELEGRAM_BOT_USERNAME=$TELEGRAM_BOT_USERNAME \
           -e ADMIN_WHITELIST=$ADMIN_WHITELIST \
-          -e ACCOUNT_SERVICE_URL=http://mc-account:8080/internal/account \
+          -e ACCOUNT_SERVICE_URL=http://mc-account:34135/api/v1/internal/account \
           $DOCKER_IMAGE:latest
         
         echo "🧹 Cleaning up old images..."
