--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,3 +4,6 @@ databaseChangeLog:
 
   - include:
       file: db/changelog/v1.0/002-create-audit-log-table.yml
+
+  - include:
+      file: db/changelog/v1.0/003-add-invited-by-to-admins.yml
