--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,6 @@ databaseChangeLog:
 
   - include:
       file: db/changelog/v1.0/003-add-invited-by-to-admins.yml
+
+  - include:
+      file: db/changelog/v1.0/004-create-admin-invitations-table.yml
